--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
   backend:
     build: ./backend
+    restart: always
     networks:
       - incloudg3       
     container_name: backend
@@ -15,6 +16,7 @@ services:
 
   frontend:
     build: ./front
+    restart: always
     networks:
       - incloudg3     
     container_name: frontend
@@ -25,6 +27,7 @@ services:
 
   database:
     image: mysql:8
+    restart: always
     networks:
       - incloudg3 
     container_name: database
